--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@tailwindcss/forms": "^0.5.7",
         "@vitejs/plugin-vue": "^5.0.4",
-        "axios": "^1.6.4",
+        "autoprefixer": "^10.4.19",
+        "axios": "^1.6.8",
         "laravel-vite-plugin": "^1.0",
+        "postcss": "^8.4.38",
+        "tailwind": "^4.0.0",
         "vite": "^5.0"
     },
     "dependencies": {
